--- a/package.json
+++ b/package.json
@@ -26,8 +26,14 @@
     "webpack-dev-server": "^3.1.8"
   },
   "dependencies": {
+    "prop-types": "^15.6.2",
     "react": "^16.5.1",
-    "react-dom": "^16.5.1"
+    "react-dom": "^16.5.1",
+    "react-redux": "^5.0.7",
+    "react-select": "^2.1.0",
+    "react-slick": "^0.23.1",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0"
   },
   "peerDependencies": {
     "less": "^3.8.x"
