--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
     "mini-css-extract-plugin": "^0.4.2",
+    "raw-loader": "^0.5.1",
     "react-hot-loader": "^4.3.8",
     "style-loader": "^0.23.0",
     "webpack": "^4.19.0",
@@ -42,6 +43,8 @@
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
     "slick-carousel": "^1.8.1",
+    "svg-inline-loader": "^0.8.0",
+    "svg-inline-react": "^3.1.0",
     "url-loader": "^1.1.2"
   },
   "peerDependencies": {
