--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-redux": "^5.0.7",
+    "react-scrollable-anchor": "^0.6.1",
     "react-select": "^2.1.0",
     "react-slick": "^0.23.1",
     "redux": "^4.0.0",
