--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --config ./webpack.dev.js",
-    "build": "webpack --env.production --config webpack.prod.js"
+    "start": "node index.js",
+    "start-dev": "webpack-dev-server --config ./webpack.dev.js",
+    "build": "webpack --env.production --config webpack.prod.js",
+    "babel": "babel src -d views"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
@@ -24,6 +27,7 @@
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1",
     "file-loader": "^2.0.0",
+    "html-webpack-plugin": "^3.2.0",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
     "mini-css-extract-plugin": "^0.4.2",
@@ -36,6 +40,7 @@
     "webpack-merge": "^4.1.4"
   },
   "dependencies": {
+    "express": "^4.16.4",
     "prop-types": "^15.6.2",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
