Packages config: use forever for server build

--- a/package.json
+++ b/package.json
@@ -4,16 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npx nodemon index.js --watch src --delay 30",
+    "start": "forever start index.js",
     "start-dev": "webpack-dev-server --config ./webpack.dev.js",
     "build": "webpack --env.production --config webpack.prod.js",
     "babel": "babel src -d views"
-  },
-  "nodemonConfig": {
-    "events": {
-      "restart": "npm run babel & npm run build",
-      "watch": "src/"
-    }
   },
   "keywords": [],
   "author": "",
@@ -48,7 +42,7 @@
   },
   "dependencies": {
     "express": "^4.16.4",
-    "nodemon": "^1.18.6",
+    "forever": "^0.15.3",
     "prop-types": "^15.6.2",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
