--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "dependencies": {
     "express": "^4.16.4",
+    "express-validator": "^5.3.0",
     "forever": "^0.15.3",
     "helmet": "^3.15.0",
     "prop-types": "^15.6.2",
