--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "express-validator": "^5.3.0",
     "forever": "^0.15.3",
     "helmet": "^3.15.0",
+    "mysql": "^2.16.0",
     "prop-types": "^15.6.2",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
