--- a/www/.htaccess
+++ b/www/.htaccess
@@ -1,6 +1,6 @@
 DirectoryIndex disabled
 RewriteEngine On
-RewriteRule ^$ http://localhost:8080/ [P,L]
+RewriteRule ^$ 0.0.0.0:8080/ [P,L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*)$ http://localhost:8080/$1 [P,L]
+RewriteRule ^(.*)$ 0.0.0.0:8080/$1 [P,L]
