--- a/www/.htaccess
+++ b/www/.htaccess
@@ -1,5 +1,6 @@
+DirectoryIndex disabled
 RewriteEngine On
-RewriteRule ^$ 0.0.0.0:8080/ [P,L]
+RewriteRule ^$ 0.0.0.0:8888/ [P,L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*)$ 0.0.0.0:8080/$1 [P,L]
+RewriteRule ^(.*)$ 0.0.0.0:8888/$1 [P,L]
